tests/syntax/good/testfile-bool-1.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>
int m() { return 1==2 && 3==4 || !(5>=6); }
