tests/syntax/bad/testfile-lexing-2.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

void m() { int i = 1/// comment starts at first /, not second
        1; }
